# stackops

./: .dockerignore  .gitignore  .kilocodeignore  .mypy.ini  .pylintrc  .ruff.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DROID.md  MANIFEST.in  Makefile  README.md  WARP.md  docker-compose.yml  forge.yaml  llm.md  llm.py  mkdocs.yml  more_cli_tools.md  pwdmgr.py  pyproject.toml  pyproject_init.sh  pyrightconfig.json  pytest.ini  results.md  shell_history_cross_platform-solutions.md  skills-lock.json  x.py  zensical.toml
.amazonq/rules/: default_rules.md
.beads/: interactions.jsonl  metadata.json
.claude/: settings.json
.codex/: config.toml  hooks.json
.deepseek/: instructions.md
.devcontainer/: devcontainer.json
.gemini/: settings.json
.github/: PYPI_PUBLISHING_SETUP.md
.github/skills/machineconfig/: SKILL.md
.github/skills/make-github-installer-config/: SKILL.md
.github/skills/stackops/: SKILL.md
.github/workflows/: docs.yml  publish-to-pypi.yml
.qwen/: settings.json
.serena/: project.yml
.stackops/: parallel.schema.json  parallel.yaml  prompts.schema.json
.stackops/agents/: parallel.schema.json  parallel.yaml  prompts.schema.json  prompts.yaml
.stackops/secrets/: secrets.example.json  secrets.schema.json
docs/: changelog.md  hierarchy.md  hosting.md  index.md  installation.md  module-intent-inventory.md  quickstart.md
docs/api/: index.md
docs/api/cluster/: index.md  layouts.md  remote.md  sessions.md
docs/api/jobs/: index.md  installer.md
docs/api/utils/: code-generation.md  environment-and-projects.md  index.md  interactive-helpers.md  paths-files-config.md  scheduling-and-cache.md
docs/assets/devops-self-explore/: sunburst.html
docs/cli/: agents.md  cloud.md  croshell.md  devops.md  fire.md  index.md  mcfg.md  msearch.md  peek.md  preview.md  seek.md  sessions.md  terminal.md  utils.md
docs/contributing/: development.md
docs/guide/: automation.md  configuration.md  data-sync.md  dotfiles.md  overview.md  packages.md
docs/stylesheets/: extra.css
docs_fragments/cli/devops/: _config.md  _data.md  _execute.md  _install.md  _network.md  _overview.md  _repos.md  _self.md  _tail.md
jobs/dockers/: Dockerfile_ai  Dockerfile_slim
jobs/shell/: build_binaries.sh  docker_build_and_publish.sh  package_build_and_publish.sh
scripts/: recreate_layout.sh  update_installer_data.sh
scripts/assets/: installer_data_update_prompt.md  tests_prompt.md
skills/agentops/: SKILL.md
skills/agentops/agents/: openai.yaml
skills/agentops/references/: handover.md  herdr.md  iter.md  parallel-agents.md  parallel-isolated-agents.md  parallel-iters.md
skills/build-fast-typer-clis/: SKILL.md
skills/build-fast-typer-clis/agents/: openai.yaml
skills/build-fast-typer-clis/references/: lazy-routing-patterns.md  measurement-and-validation.md
skills/build-typer-cli/: SKILL.md
skills/build-typer-cli/agents/: openai.yaml
skills/build-typer-cli/references/: lazy-routing-patterns.md  measurement-and-validation.md
skills/stackops/: SKILL.md
skills/stackops/references/: cli-map.md  source-map.md
skills/workflows/: SKILL.md
skills/workflows/agents/: openai.yaml
skills/workflows/references/: handover.md  herdr.md  iter.md  parallel-agents.md  parallel-isolated-agents.md  parallel-iters.md
src/machineconfig/: logger.py
src/machineconfig/profile/: create_helper.py  create_links.py  create_links_export.py  create_shell_profile.py  dotfiles_mapper.py  mapper_data.schema.json  mapper_data.yaml  mapper_dotfiles.toml  mapper_dotfiles.yaml
src/machineconfig/setup_windows/: __init__.py
src/machineconfig/tests/: test_agents_create_artifacts.py  test_agents_create_inputs.py  test_agents_rich_output.py  test_cli_config_dotfile_gpg.py  test_cli_self_ai.py  test_cloud_copy_gpg_errors.py  test_cloud_manager_rclone.py  test_devops_backup_config_cli.py  test_path_compression.py  test_path_extended_cloud_gpg.py  test_rclone_wrapper.py  test_reference_repo_files_exist.py  test_utils_io_gpg.py  test_utils_io_gpg_errors.py  test_utils_rclone.py  test_yazi_fullscreen_preview.py
src/machineconfig/utils/: code.py  io.py  links.py  notifications.py  options.py  path_compression.py  path_core.py  path_extended.py  path_extended_functional.py  path_helper.py  path_reference.py  path_reference_validation.py  procs.py  rclone_wrapper.py  scheduler.py  source_of_truth.py  ssh.py  terminal.py  upgrade_packages.py  ve.py
src/manual/: test_agents_skill_impl.py  test_cli_config_secrets.py  test_cli_self_clone.py  test_cli_self_docker.py  test_cli_short_options.py  test_dotfile_mapper_assets.py  test_herdr_backend.py  test_offline_installer_paths.py  test_path_references.py  test_secrets_schema.py  test_secrets_search_guidance.py  test_stackops_skill_refs.py  test_stackops_versioning.py
src/stackops/: logger.py  paths.py  secrets.py  version.py
src/stackops/architecture_graph/: __main__.py  cli.py  graph.py  graph_css.txt  graph_css_continued.txt  models.py  (+4 more)
tests/: path_extended_functional_support.py  test_agents_ask.py  test_agents_create.py  test_agents_make_config_mcp.py  test_ast_search.py  test_cli_config_dump.py  test_cli_config_secrets.py  test_cli_config_tmux.py  test_cli_data_register.py  test_cli_graph_lazy_dispatch.py  test_cli_graph_search.py  test_cli_self.py  test_cli_self_ai_app.py  test_cli_self_assets.py  test_cli_self_docs.py  test_cloud_copy_share_record.py  test_cloud_repo_sync.py  test_code_utils.py  test_create_links_summary.py  test_csvlens_installer_data.py  test_dbms.py  test_devops_backup_config.py  test_devops_config_sync.py  test_devops_network_cli.py  test_devops_status.py  test_docs_changelog.py  test_docs_hierarchy.py  test_file_utils_scrape.py  test_file_utils_surya.py  test_generate_cli_graph.py  test_install_request_logic.py  test_installer_cli.py  test_installer_explore.py  test_installer_locator_utils.py  test_installer_python_scripts.py  test_installer_summary.py  test_io_gpg_bytes.py  test_layout_maker_stagger.py  test_mcfg_entry.py  test_msearch_impl.py  (+35 more)
tests/manual/: test_path_references.py
tests/mirror/: conftest.py
(+2458 files in other folders)
