[build-system]
requires = ["setuptools>=80", "wheel"]
build-backend = "setuptools.build_meta"
# requires = ["hatchling"]
# build-backend = "hatchling.build"

[project]
name = "stackops"
version = "26.6.7"
description = "Developer Stack Manager"
readme = "README.md"
license = {text = "Apache 2.0"}
authors = [
    {name = "Alex Al-Saffar", email = "programmer@usa.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.13"
dependencies = [
    "fire>=0.7.1",
    "gitpython>=3.1.46",
    "joblib>=1.5.3",
    "psutil>=7.2.2",
    "pyyaml>=6.0.3",
    "questionary>=2.1.1",
    "randomname>=0.2.1",
    "requests>=2.32.5",
    "rich>=14.3.3",
    "tenacity>=9.1.4",
    "typer>=0.24.1",
]

[project.optional-dependencies]
windows = []
plot = [

]


[project.urls]
"Homepage" = "https://github.com/thisismygitrepo/stackops"
"Bug Tracker" = "https://github.com/thisismygitrepo/stackops/issues"

[project.scripts]
devops = "stackops.scripts.python.devops:main"
cloud = "stackops.scripts.python.cloud:main"
fire = "stackops.scripts.python.fire_jobs:main"
agents = "stackops.scripts.python.agents:main"
terminal = "stackops.scripts.python.terminal:main"
preview = "stackops.scripts.python.preview:main"
utils = "stackops.scripts.python.utils:main"
stackops = "stackops.scripts.python.stackops_entry:main"
seek = "stackops.scripts.python.seek:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
license-files = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
stackops = ["**/*.toml", "**/*.md", "**/*.sh", "**/*.ps1", "**/*.txt", "utils/schemas/**/*.json", "utils/schemas/**/*.yaml"]

[dependency-groups]
dev = [
    "aider>=0.2.6",
    "build>=1.5.0",
    "cleanpy>=0.5.1",
    "cowsay>=6.1",
    "duckdb>=1.5.4",
    "gdown>=6.1.0",
    "griffe>=2.1.0",
    "ipdb>=0.13.13",
    "ipykernel>=7.3.0",
    "ipython>=9.15.0",
    "kaleido>=1.3.0",
    "marimo>=0.23.11",
    "matplotlib>=3.11.0",
    "mkdocstrings>=1.0.4",
    "mkdocstrings-python>=2.0.5",
    "mypy>=2.1.0",
    "numpy>=2.5.0",
    "pandas>=3.0.3",
    "paramiko>=5.0.0",
    "plotly>=6.8.0",
    "polars>=1.42.0",
    "pre-commit>=4.6.0",
    "pudb>=2025.1.5",
    "py7zr>=1.1.3",
    "pydantic>=2.13.4",
    "pydeps>=3.0.6",
    "pyinstaller>=6.21.0",
    "pylint>=4.0.6",
    "pylsp-mypy>=0.7.3",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.14.2",
    "pyrefly>=1.1.1",
    "pyright>=1.1.411",
    "pytest>=9.1.1",
    "python-lsp-server[mypy]>=1.14.0",
    "qrcode>=8.2",
    "ruff>=0.15.20",
    "ruff-lsp>=0.0.62",
    "sqlalchemy>=2.0.51",
    "textual>=8.2.7",
    "trogon>=0.6.0",
    "ty>=0.0.55",
    "types-mysqlclient>=2.2.0.20260508",
    "types-paramiko>=5.0.0.20260617",
    "types-pytz>=2026.2.0.20260518",
    "types-pyyaml>=6.0.12.20260518",
    "types-requests>=2.33.0.20260518",
    "types-sqlalchemy>=1.4.53.38",
    "types-toml>=0.10.8.20260518",
    "types-urllib3>=1.26.25.14",
    "vt-py>=0.22.0",
    "yapf>=0.43.0",
    "zensical>=0.0.46",
]
other = [
    "duckdb-engine>=0.17.0",
    "pycrucible>=0.4.6",
    "vt-py>=0.22.0",
]
plot = [
    "duckdb>=1.5.4",
    "ipykernel>=7.3.0",
    "ipython>=9.15.0",
    "jupyterlab>=4.6.0",
    "kaleido>=1.3.0",
    "matplotlib>=3.11.0",
    "nbformat>=5.10.4",
    "numpy>=2.5.0",
    "plotly>=6.8.0",
    "polars>=1.42.0",
    "python-magic>=0.4.27",
    "sqlalchemy>=2.0.51",
]


# [tool.uv]
# default-groups = []

[tool.pycrucible]
entry = "src/stackops/scripts/python/devops.py"
[tool.pycrucible.options]
debug = false
extract_to_temp = false
delete_after_run = false
offline_mode = false

[tool.pycrucible.patterns]
include = [
    "**/*.py",
    "**/*.ps1",
    "**/*.sh",
    "**/*.md",
]
exclude = [
    "**/__pycache__/**",
]
